<resources>
    <string name="app_name">E-Study</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="abstract_circle">Abstract Circle</string>
    <string name="lewati">Lewati</string>
    <string name="lanjutkan"><![CDATA[Lanjutkan >]]></string>
    <string name="welcome_image">Welcome Image</string>
    <string name="welcome_title0">Selamat datang</string>
    <string name="welcome_title1">Selamat datang!</string>
    <string name="welcome_title2">Sulit memahami materi?</string>
    <string name="welcome_title3">Butuh teman belajar?</string>
    <string name="welcome_desc1">Belajar lebih mudah dan \nmenyenangkan</string>
    <string name="welcome_desc2">E-STUDY hadir dengan video pembelajaran \ninteraktif dan pengajar tersertifikasi</string>
    <string name="welcome_desc3">Tetap terhubung bersama \nteman-temanmu melalui diskusi kelas</string>
    <string name="mulai">Mulai</string>
    <string name="back_button_on_register_desc">Back Button on Register</string>
    <string name="halo">Halo..</string>
    <string name="daftar_dulu_yuk">Daftar dulu yuk!</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="kata_sandi">kata sandi</string>
    <string name="konfirmasi_kata_sandi">konfirmasi kata sandi</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun_masuk">Sudah punya akun? <font color="#ffbf00">Masuk</font></string>
    <string name="atau">atau</string>
    <string name="register_dengan_facebook">Register dengan Facebook</string>
    <string name="register_dengan_google">Register dengan Google</string>
    <string name="register_dengan_linkedin">Register dengan LinkedIn</string>
    <string name="profile_image">Profile Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="masuk">Masuk</string>
    <string name="lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="atau_masuk_dengan">atau masuk dengan</string>
    <string name="kembali">kembali!</string>
    <string name="cari_kelasmu">Cari Kelasmu...</string>
    <string name="user_greet_sample">Hi Ibrahim,</string>
    <string name="kategori_kelas">Kategori Kelas</string>
    <string name="home_kategori_desc">Temukan beragam kursusmu sesuai dengan tingkatanmu di kursus kami E-study</string>
    <string name="kursus_sd">Kursus SD</string>
    <string name="kursus_sd_desc">+500 Kursus SD</string>
    <string name="kursus_sma">Kursus SMA</string>
    <string name="kursus_sma_desc">+500 Kursus SMA</string>
    <string name="kursus_smp_desc">+500 Kursus SMP</string>
    <string name="kursus_kuliah_desc">+500 Kursus Kuliah</string>
    <string name="kursus_kuliah">Kursus Kuliah</string>
    <string name="kursus_smp">Kursus SMP</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="transaction">Transaction</string>
    <string name="kelas">Kelas</string>
    <string name="suka">Suka</string>
    <string name="sertifikat">Sertifikat</string>
    <string name="account_stim_tv">Yuk lanjut belajar!</string>
    <string name="course_image_desc">Course Image</string>
    <string name="navigate_up_button">Navigate Up Button</string>
    <string name="modul">Modul</string>
    <string name="video">Video</string>
    <string name="siswa">Siswa</string>
    <string name="penilaian">Penilaian</string>
    <string name="buy_now">Beli Sekarang</string>
    <string name="add_to_cart_button">Add to cart button</string>
    <string name="deskripsi_kelas">Deskripsi Kelas</string>
    <string name="video_item_indicator_desc">Video Item Indicator</string>
    <string name="locked_item_indicator_desc">Locked Item Indicator</string>
    <string name="empty_cart_string">Keranjangmu masih kosong, nih!</string>
    <string name="cart_proceed">Lanjutkan Pembayaran</string>
    <string name="course_image">Course Image</string>
    <string name="trash_icon">Trash Icon</string>
    <string name="back_btn">Back Button</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="bayar">Bayar</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="voucher">Voucher</string>
    <string name="pilih_voucher">Pilih Voucher</string>
    <string name="pilih_metode">Pilih Metode</string>
    <string name="group_indicator">Group Indicator</string>
    <string name="info_pembayaran">Info Pembayaran</string>
    <string name="no_virtual_account">No Virtual Account</string>
    <string name="salin">SALIN</string>
    <string name="first_text_tips_tf_atm">Pilih <b>Bayar/Beli</b></string>
    <string name="second_text_tips_tf_atm">Pilih Menu <b>Transfer</b></string>
    <string name="third_text_tips_tf_atm">Masukkan <b>kode bank</b> diikuti dengan <b>Rek. Tujuan</b></string>
    <string name="fourth_text_tips_tf_atm">Masukkan Nominal sesuai yang ada di <b>laman Info Pembayaran</b></string>
    <string name="fifth_text_tips_tf_atm">Pastikan informasi yang tertera di layar. Jika sudah benar pilih <b>OK</b></string>
    <string name="first_text_tf_bank_mbanking">Pilih <b>m-Transfer > </b>Mandiri virtual account</string>
    <string name="second_text_tf_bank_mbanking">Masukkan nomor virtual account di atas dan pilih <b>Send</b></string>
    <string name="third_text_tf_bank_mbanking">Periksa informasi yang tertera di layar. Pastikan merchant adalah <b>E-Study</b>, Total tagihan dan username sudah benar. Jika benar pilih <b>OK</b></string>
    <string name="ok">Ok</string>
    <string name="petunjuk_transfer_atm">Petunjuk Transfer ATM</string>
    <string name="petunjuk_transfer_m_banking">Petunjuk Transfer m-Banking</string>
    <string name="payment_info_2nd_title_intro">Yuk selesaikan Pembayaranmu!</string>
    <string name="batas_waktu_pembayaran">Batas Waktu Pembayaran</string>
    <string name="double_colon">:</string>
    <string name="hours">jam</string>
    <string name="minutes">menit</string>
    <string name="seconds">detik</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="memproses_pembayaran">Memproses Pembayaran</string>
    <string name="payment_success_indicator_desc">Payment Success Indicator</string>
    <string name="pembayaran_berhasil">Pembayaran Berhasil</string>
    <string name="terima_kasih">Terimakasih</string>
    <string name="payment_success_character_desc">Payment Success Character</string>
    <string name="video_pembelajaran">Video Pembelajaran</string>
    <string name="modul_pembelajaran">Modul Pembelajaran</string>
    <string name="latihan_soal">Latihan Soal</string>
    <string name="ulasan_dan_penilaian">Ulasan dan Penilaian</string>
    <string name="diskusi_kelas">Diskusi Kelas</string>
    <string name="dialog_fabutton_desc">Dialog Button</string>
    <string name="progress_belajar">Progress Belajar</string>
    <string name="module_item_indicator_desc">Module Item Indicator</string>
    <string name="quiz_item_indicator_desc">Quiz Item Indicator</string>
    <string name="oops_data_belum_ada">Oops! Data belum ada.</string>
    <string name="perhatian">Perhatian</string>
    <string name="prototype_dialog_paragraph">Aplikasi masih berupa prototype dan hanya bertujuan untuk memberikan gambar besar dari ide aplikasi. Sehingga beberapa data, fitur, dan view (mis. tombol) belum berfungsi seperti yang seharusnya.</string>
    <string name="daftar_kelas">Daftar Kelas</string>
    <string name="feed">Feed</string>
    <string name="keranjang">Keranjang</string>
    <string name="akun">Akun</string>
    <string name="beranda">Beranda</string>
    <string name="trending_minggu">Trending Minggu Ini</string>
    <string name="news_image_desc">News Image</string>
</resources>