<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserLoginFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_abstract_circle"
            android:contentDescription="@string/abstract_circle"/>

        <ImageView
            android:id="@+id/login_back_btn"
            android:layout_width="60dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/ic_back"
            android:contentDescription="@string/back_button_on_register_desc"
            android:layout_marginTop="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="@dimen/register_layout_margin"
            android:layout_marginEnd="@dimen/register_layout_margin"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_title0"
                style="@style/UserSignHeadline4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kembali"
                style="@style/UserSignHeadline6"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                app:startIconTint="?attr/colorPrimary"
                android:layout_marginTop="44dp"
                style="@style/MaterialEditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_login_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:paddingTop="12dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconTint="?attr/colorPrimary"
                app:endIconMode="password_toggle"
                app:endIconTint="?attr/colorPrimary"
                android:hint="@string/kata_sandi"
                android:layout_marginTop="6dp"
                style="@style/MaterialEditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_login_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kata_sandi"
                    android:paddingTop="12dp"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="?attr/colorSecondary"
                android:text="@string/masuk"
                android:textAllCaps="false"
                android:layout_marginTop="7dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lupa_kata_sandi"
                android:textSize="13sp"
                android:textAlignment="viewEnd"
                android:textColor="?attr/colorSecondary"
                android:textStyle="bold"
                android:layout_marginTop="12dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/atau_masuk_dengan"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_light"
                android:textColor="#FFFFFF"
                android:layout_marginTop="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_icons8_facebook"
                    android:contentDescription="@string/register_dengan_facebook"
                    android:layout_marginEnd="8dp"/>

                <ImageView
                    android:id="@+id/login_google_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_icons8_google"
                    android:layout_marginStart="6dp"
                    android:contentDescription="@string/register_dengan_google"
                    android:layout_marginEnd="6dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_icons8_linkedin_circled"
                    android:contentDescription="@string/register_dengan_linkedin"
                    android:layout_marginStart="8dp"/>


            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</layout>