<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".welcomeScreens.UserRegisterFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_abstract_circle"
            android:contentDescription="@string/abstract_circle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="@dimen/register_layout_margin"
            android:layout_marginEnd="@dimen/register_layout_margin"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/halo"
                style="@style/UserSignHeadline4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daftar_dulu_yuk"
                style="@style/UserSignHeadline6"/>

            <FrameLayout
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="start"
                android:layout_marginTop="4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_camera"
                    android:layout_gravity="bottom|end"
                    android:contentDescription="@string/upload_image"
                    android:translationZ="10dp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:id="@+id/iv_user_register"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/profile_image"
                        android:scaleType="centerCrop"/>

                </androidx.cardview.widget.CardView>


            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_user"
                app:startIconTint="?attr/colorPrimary"
                android:hint="@string/username"
                style="@style/MaterialEditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_username_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:paddingTop="12dp"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                app:startIconTint="?attr/colorPrimary"
                android:hint="@string/email"
                android:layout_marginTop="6dp"
                style="@style/MaterialEditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:paddingTop="12dp"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconTint="?attr/colorPrimary"
                app:endIconMode="password_toggle"
                app:endIconTint="?attr/colorPrimary"
                android:hint="@string/kata_sandi"
                android:layout_marginTop="6dp"
                style="@style/MaterialEditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kata_sandi"
                    android:paddingTop="12dp"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconTint="?attr/colorPrimary"
                app:endIconMode="password_toggle"
                app:endIconTint="?attr/colorPrimary"
                android:hint="@string/konfirmasi_kata_sandi"
                android:layout_marginTop="6dp"
                style="@style/MaterialEditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_confirm_pw_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/konfirmasi_kata_sandi"
                    android:paddingTop="12dp"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="?attr/colorSecondary"
                android:text="@string/daftar"
                android:textAllCaps="false"
                android:layout_marginTop="7dp"/>

            <TextView
                android:id="@+id/punya_akun_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sudah_punya_akun_masuk"
                android:textSize="13sp"
                android:textAlignment="viewEnd"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginTop="12dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/atau"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_light"
                android:textColor="#FFFFFF"
                android:layout_marginTop="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_icons8_facebook"
                    android:contentDescription="@string/register_dengan_facebook"
                    android:layout_marginEnd="8dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_icons8_google"
                    android:layout_marginStart="6dp"
                    android:contentDescription="@string/register_dengan_google"
                    android:layout_marginEnd="6dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_icons8_linkedin_circled"
                    android:contentDescription="@string/register_dengan_linkedin"
                    android:layout_marginStart="8dp"/>


            </LinearLayout>

        </LinearLayout>



    </FrameLayout>

</layout>

