<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.mainScreens.payment.ConfirmPaymentFragment">

    <data>
        <variable
            name="viewModel"
            type="com.drunken.e_study.ui.mainScreens.payment.ConfirmPaymentViewModel" />
    </data>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_home_ellipse_bottom"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/abstract_circle"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_ellipse_86"
            android:contentDescription="@string/abstract_circle"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/navigate_up_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_back"
                android:contentDescription="@string/back_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp"/>

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pembayaran"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/payment_rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/navigate_up_btn"
                android:padding="32dp"
                android:layout_marginTop="14dp"
                android:clipToPadding="false"
                app:listDataPayment="@{viewModel.course}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/voucher_container"/>

            <RelativeLayout
                android:id="@+id/voucher_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/metode_pembayaran_container"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="#801E418E">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voucher"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pilih_voucher"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:layout_alignParentEnd="true"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/metode_pembayaran_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/confirm_payment_container"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="#82A4ED">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/metode_pembayaran"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pilih_metode"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:layout_alignParentEnd="true"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/confirm_payment_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_pembayaran"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Rp 60.000"
                    android:text="@{viewModel.totalPriceString}"
                    android:textColor="@color/secondaryDarkColor"
                    android:layout_alignParentEnd="true"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/tv_total_price"
                    android:text="@string/bayar"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/secondaryColor"
                    android:width="135dp"
                    app:cornerRadius="12dp"/>
            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>
